feat(details): improve the season details UI

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,16 +30,16 @@
   --color-Secondary-700: #126297;
   --color-Secondary-800: #0c4265;
   --color-Secondary-900: #062032;
-  --color-Tertary-50: #f6edff;
-  --color-Tertary-100: #f0e2ff;
-  --color-Tertary-200: #e2c5ff;
-  --color-Tertary-300: #d3a7ff;
-  --color-Tertary-400: #c58aff;
-  --color-Tertary-500: #b66dff;
-  --color-Tertary-600: #9257cc;
-  --color-Tertary-700: #6d4199;
-  --color-Tertary-800: #492c66;
-  --color-Tertary-900: #241633;
+  --color-Tertiary-50: #f6edff;
+  --color-Tertiary-100: #f0e2ff;
+  --color-Tertiary-200: #e2c5ff;
+  --color-Tertiary-300: #d3a7ff;
+  --color-Tertiary-400: #c58aff;
+  --color-Tertiary-500: #b66dff;
+  --color-Tertiary-600: #9257cc;
+  --color-Tertiary-700: #6d4199;
+  --color-Tertiary-800: #492c66;
+  --color-Tertiary-900: #241633;
   --color-Success-50: #e1f9f2;
   --color-Success-100: #cdf5e9;
   --color-Success-200: #9bebd3;
