--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -175,6 +175,10 @@
   @apply rounded-lg border border-white/10 bg-gray-800/40 px-3 py-1.5  backdrop-blur-sm
 }
 
+@utility button-secondary {
+  @apply  rounded-lg border border-white/10 bg-white/5! py-2.5 text-sm font-medium text-white backdrop-blur-md transition-all! duration-200 hover:scale-105 hover:bg-white/10
+}
+
 
 body {
   @apply dark blur-bg bg-[url('/images/Background.svg')] antialiased;
