--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -172,22 +172,31 @@
 
 
 @utility pill-bg {
-  @apply rounded-lg border border-white/10 bg-gray-800/40 px-3 py-1.5 backdrop-blur-sm transition-colors duration-200 hover:border-white/20
+  @apply rounded-xl border border-white/10 bg-white/5 px-3 py-1.5 backdrop-blur-sm transition-colors duration-200 hover:border-white/20
 }
 
 @utility button-secondary {
-  @apply  rounded-lg border border-white/10 bg-white/5! py-2.5 text-sm font-medium text-white backdrop-blur-md transition-all! duration-200  hover:bg-white/10!;
+  @apply rounded-lg border border-white/10 bg-white/5 py-2.5 text-sm text-white backdrop-blur-md transition-all duration-200 hover:bg-white/10;
 }
 
 @utility tooltip-secondary {
-  @apply text-xs! font-medium text-default-500 bg-white/5! border border-white/5 backdrop-blur-md;
+  @apply text-xs text-default-500 bg-white/5 border border-white/5 backdrop-blur-md;
 }
 
 @utility kbd {
-  @apply inline-flex items-center justify-center rounded border border-white/10 bg-white/5 px-2 py-1 text-xs font-medium text-white backdrop-blur-sm;
+  @apply inline-flex items-center justify-center rounded border border-white/10 bg-white/5 px-2 py-1 text-xs text-white backdrop-blur-sm;
 }
+
 @utility kbd-sm {
-  @apply kbd px-1! py-0.5! text-[10px]!; 
+  @apply kbd px-1 py-0.5 text-[10px];
+}
+
+@utility selectable-button {
+  @apply pill-bg flex items-center justify-center gap-2  capitalize transition-colors duration-200 text-Grey-300 border-white/10 hover:border-white/20 hover:bg-white/10;
+
+  &[data-is-selected='true'] {
+    @apply border-Secondary-400 bg-Secondary-500/20 text-Secondary-50;
+  }
 }
 
 
