feat(homepage): add the trending and coming soon sections

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -176,11 +176,11 @@
 }
 
 @utility button-primary {
-  @apply from-Primary-600 to-Secondary-600 hover:from-Primary-700 hover:to-Secondary-700 shadow-Primary-600/20 flex items-center gap-2 rounded-lg bg-gradient-to-r px-4 py-2 text-sm font-medium text-white shadow-lg transition-all duration-200;
+  @apply from-Primary-600 to-Secondary-600 hover:from-Primary-700 hover:to-Secondary-700 shadow-Primary-600/20 flex items-center gap-2  bg-gradient-to-r  text-sm font-medium text-white shadow-lg transition-all duration-200;
 }
 
 @utility button-secondary {
-  @apply border border-white/10 bg-white/5 py-2.5 text-sm text-white backdrop-blur-md transition-all duration-200 hover:bg-white/10;
+  @apply border border-white/10 bg-white/5 text-sm text-white backdrop-blur-md transition-all duration-200 hover:bg-white/10;
 }
 
 @utility tooltip-secondary {
