--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,9 @@
 @import 'swiper/css';
 @import 'swiper/css/navigation';
 @import 'swiper/css/scrollbar';
+@import 'swiper/css/pagination';
+@import 'swiper/css/effect-creative';
+
 
 @config "../../tailwind.config.ts";
 
