--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -164,7 +164,7 @@ body[data-animations='false'] *::after {
 
 @utility blur-bg {
   background-image: url('/images/Background.svg');
-  /* background-size: cover; */
+  background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center;
   background-color: var(--color-Grey-900);
